--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
 	"dotenv": "^8.2.0",
-    "mapbox-gl": "^1.3.1",
+    "mapbox-gl": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
