--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "my-app",
+  "name": "d2d-frontend-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@turf/turf": "^5.1.6",
+    "dotenv": "^8.2.0",
+    "mapbox-gl": "^1.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-	"dotenv": "^8.2.0",
-    "mapbox-gl": "^1.3.1"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
